--- a/src/Login/LoginHome.css
+++ b/src/Login/LoginHome.css
@@ -206,3 +206,111 @@ html, body {
   }
 }
   
+
+/* sign in */
+
+.signin-container {
+  text-align: center;
+  margin-top: 50px;
+  padding: 20px;
+  background-color: rgba(255, 255, 255, 0.8); /* Adjust the alpha value for the desired lightness */
+  border-radius: 8px;
+  width: 400px; /* Adjust the width as needed */
+  height: 350px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+/* SignUp.css */
+
+h1.signin-heading {
+  font-size: 2.5em;
+  margin-bottom: 20px;
+  color: #0a0909; /* Dark color for the text */
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+
+.input-container {
+  margin-bottom: 20px;
+}
+
+label {
+  display: block;
+  margin-bottom: 5px;
+  color: #0a0909; /* Dark color for labels */
+}
+
+input {
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #868282;
+  border-radius: 5px;
+  box-sizing: border-box;
+  margin-bottom: 10px;
+}
+
+.signin-button {
+  padding: 15px 30px; /* Adjust padding for larger buttons */
+  font-size: 1.2em; /* Adjust font size for larger buttons */
+  cursor: pointer;
+  background-color: #FF013C;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 120px; /* Updated width to 120px */
+  height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+  width: 120px; /* Updated width to 120px */
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #FF013C;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #FF013C;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(94px); /* Updated translation to 94px */
+  -ms-transform: translateX(94px);
+  transform: translateX(94px);
+}
