corrected styling overridden by other components styling

--- a/src/Dashboard/Dashboard.css
+++ b/src/Dashboard/Dashboard.css
@@ -79,7 +79,7 @@
   width: 98%;
   padding: 12px;
   margin-top: 20px;
-  border: 1px solid #990000; /* Darker red border */
+  /* border: 1px solid #990000; Darker red border */
   border-radius: 5px;
   font-size: 1.5em;
   margin-bottom: 15px;
