--- a/src/Profile/Users/Users.css
+++ b/src/Profile/Users/Users.css
@@ -21,3 +21,22 @@
 .avatar-container {
     text-align: center;
 }
+/* Search Bar */
+.container {
+    text-align: center;
+  }
+  
+  .form-control {
+    width: 300px;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    margin-bottom: 20px;
+    font-size: 16px;
+  }
+  
+  /* User Cards */
+  .avatar-container {
+    text-align: center;
+  }
+  
