--- a/src/Dashboard/Dashboard.css
+++ b/src/Dashboard/Dashboard.css
@@ -365,3 +365,60 @@ body::-webkit-scrollbar-track {
   color: #ee9595; /* Change text color on hover */
 }
 
+/* ... (Existing CSS code) ... */
+
+.about-container {
+  display: flex;
+  
+  align-items: center;
+  padding: 20px;
+  text-align: left;
+  color:white;
+  font-size: 0.8em;
+}
+
+.about-content {
+  max-width: 400px;
+  margin-top: 20px;
+  font-size: 0.8em;
+
+}
+
+.about-section {
+  margin-top: 40px;
+  color:white;
+  font-size: 0.8em;
+}
+
+.about-section img {
+  width: 100%;
+  max-height: 700px;
+  object-fit: cover;
+  border-radius: 8px;
+  margin-bottom: 20px;
+  
+
+}
+
+.about-section p {
+ font-size: 1.5em;
+  
+ color: white;
+}
+
+.about-hackit p {
+  font-size: 0.8em;
+  color: white;
+   
+ 
+ }
+ 
+.about-hackit {
+  
+  max-width: 1200px;
+  margin-top: 20px;
+ text-align: left;
+ 
+}
+
+/* ... (Continue with existing CSS code) ... */
