--- a/src/Dashboard/Dashboard.css
+++ b/src/Dashboard/Dashboard.css
@@ -365,3 +365,92 @@ body::-webkit-scrollbar-track {
   color: #ee9595; /* Change text color on hover */
 }
 
+.event-list-admin{
+  list-style: none;
+  padding: 0;
+}
+.event-item-admin {
+  background-color: #1c1e1e;
+  padding: 10px;
+  opacity: 90%;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 98%;
+  margin-left: 1%;
+}
+.event-item-admin h5{
+  margin-left: 1%;
+  color: white;
+}
+
+.event-details-admin {
+  flex: .5;
+  display: flex;
+  justify-content: space-between;
+  /* gap: 20px; */
+  font-size: 1em; /* Smaller font size for date and venue */
+  color: #ddd;
+  margin-bottom: 5px;
+  text-align: left; /* Left-align the text */
+}
+
+
+.btn-delete {
+  background-color: #e74c3c;
+  color: white;
+  border: none;
+  padding: 8px 15px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.btn-delete:hover {
+  background-color: #c0392b;
+}
+.user-card {
+  background-color: #3d3d3d;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 15px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease-in-out;
+}
+
+.user-card:hover {
+  transform: scale(1.05);
+}
+
+/* User Avatar */
+.user-avatar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
+  width: 50px;
+  height: 50px;
+  background: #3498db;
+  color: #fff;
+  border-radius: 50%;
+}
+
+/* User Details */
+.user-details {
+  text-align: center;
+}
+
+.user-username {
+  margin-top: 10px;
+}
+
+/* User Actions */
+.user-actions {
+  display: flex;
+  justify-content: center;
+  margin-top: 15px;
+}
+
+
