--- a/src/Dashboard/Dashboard.css
+++ b/src/Dashboard/Dashboard.css
@@ -1,4 +1,5 @@
 .entire-page {
+  height: 100vh;
   /*  margin: 0;
    font-family: "Arial", sans-serif; */
    background: #000 !important;
@@ -99,7 +100,7 @@
  .event-list {
    display: flex;
    flex-wrap: wrap;
-   justify-content: left;
+   justify-content: space-between;
    margin: auto;
    /* gap: 20px;
    margin-left: 5%; */
@@ -327,34 +328,45 @@
  }
  
  .event-cards{
-   flex: .75;
+   flex: 1.5 !important;
    display: flex;
    flex-wrap: wrap;
-   margin: auto;
+   /* margin: auto; */
    justify-content: left;
    align-items: center;
  }
  
- .external-events {
-   flex: 0.25;
-   margin: 10px auto;
-   justify-content: left;
-   color: white;
-   height: 100%;
-   /* text-align: left; */
-   background-color: #333; /* Set a background color for the external events container */
-   /* padding: 15px; */
-   border-radius: 8px;
-   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5); /* Add a subtle box shadow */
+ .external-list{
+  /* padding: 0 5px; */
+  box-shadow: 0px 0px 15px rgba(243, 240, 240, 0.5);
+  margin: 10px;
+  border-radius: 8px;
+  border: 2px solid #fff;
+  height: min-content;
+  background-color: #333;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5); /* Add a subtle box shadow */
    transition: background-color 0.3s ease, transform 0.3s ease;
  }
  
- .external-events:hover {
+ .external-events {
+   flex: .1 !important;
+   /* margin: 10px auto; */
+   justify-content: left;
+   color: white;
+   /* height: 100vh; */
+   /* text-align: left; */
+   /* padding: 15px; */
+   /* border-radius: 8px; */
+   
+ }
+ 
+ .external-list:hover {
    background-color: #444; /* Darken the background color on hover */
    transform: scale(1.05); /* Enlarge on hover */
  }
  
  .external-events-title {
+  /* padding: 0 5px; */
    font-size: medium;
    color: #fff;
    margin-bottom: 10px;
