--- a/src/Dashboard/Dashboard.css
+++ b/src/Dashboard/Dashboard.css
@@ -272,22 +272,26 @@ body::-webkit-scrollbar-track {
   left: 0;
   width: 100%;
   height: 100%;
-  background: white(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow-y: auto;
 }
 
 .create-event-form-popup {
   background: black;
   padding: 20px;
   border-radius: 8px;
-  width: 400px; /* Adjust the width as needed */
+  width: 800px; 
+  max-height: 80vh;
+  overflow: auto; 
 }
 
 .create-event-form-popup .button-container {
   display: flex;
   justify-content: space-between;
+ 
 }
 
 .create-event-form-popup input {
@@ -297,13 +301,13 @@ body::-webkit-scrollbar-track {
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
-  color: white; /* Set text color to white */
+  color: rgb(0, 0, 0); /* Set text color to white */
   background-color: white;
 }
 
-.popup button:hover {
+/* .popup button:hover {
   background-color: #45a049;
-}
+} */
 
 .form-field-white {
   background-color: #fff !important;
