--- a/src/Profile/Users/Users.css
+++ b/src/Profile/Users/Users.css
@@ -1,42 +1,42 @@
-/* Add this style to your existing CSS or create a new CSS file */
 .avatar {
-    /* Add other styles as needed */
-    display: inline-block;
+  /* Add other styles as needed */
+  display: inline-block;
 }
 
 .avatar-lg {
-    width: 150px; /* Set the width to 150px */
-    height: 150px; /* Set the height to 150px */
-    line-height: 150px; /* Center the text vertically within the circle */
-    text-align: center;
-    border-radius: 50%; /* Set the radius to 50% to create a circle */
-    background: linear-gradient(45deg, #4389d4, rgb(255, 64, 0)); /* Use your desired gradient colors */
-    color: #ffffff; /* Customize the text color */
-    font-size: 40px; /* Customize the font size */
-    font-weight: bold; /* Customize the font weight */
+  width: 150px !important; /* Set the width to 200px or your desired size */
+  height: 150px !important; /* Set the height to 200px or your desired size */
+  line-height: 150px !important; /* Center the text vertically within the circle */
+  text-align: center !important;
+  border-radius: 50% !important; /* Set the radius to 50% to create a circle */
+  background: linear-gradient(45deg, #4389d4, rgb(255, 64, 0)) ; /* Use your desired gradient colors */
+  color: #ffffff !important; /* Customize the text color */
+  font-size: 40px !important; /* Customize the font size */
+  font-weight: bold !important; /* Customize the font weight */
 
-    /* Remove display: flex; */
+  /* Remove display: flex; */
 }
+
 
 .avatar-container {
-    text-align: center;
+  text-align: center;
 }
+
 /* Search Bar */
 .container {
-    text-align: center;
-  }
-  
-  .form-control {
-    width: 300px;
-    padding: 10px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    margin-bottom: 20px;
-    font-size: 16px;
-  }
-  
-  /* User Cards */
-  .avatar-container {
-    text-align: center;
-  }
-  
+  text-align: center;
+}
+
+.form-control {
+  width: 300px;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  margin-bottom: 20px;
+  font-size: 16px;
+}
+
+/* User Cards */
+.avatar-container {
+  text-align: center;
+}
